# park_alpak

./: .gitignore  Dockerfile  docker-compose.yaml  docker_health.py  main.py  pyproject.toml  requirements.txt
src/config/: __init__.py  config_loader.py  config_models.py
src/config/logger/: __init__.py  logger.py
src/config/logger/src/: handler.py  schema.py
src/croner/: __init__.py  cron_parser.py  croner.py  dag.py  test.py
src/croner/src/: add_sales_dag copy.py
src/dags/: add_ads_dag.py  add_sales_dag.py  bot_script.py  bot_script_week.py  google_dag.py  google_month.py  test copy.py  test.py  timepad_dag.py  timepad_parallel_dag.py  weather_dag.py
src/sql/: all_sales.sql  ins_online_sales.sql  insert_adds.sql  new_dm.sql  prepared_budget.sql  sales.sql  week_script_bot.sql
