[project]
name = "park-alpak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.9.0",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.43",
]
